# zombie-movement-calculator

./: Cargo.toml  README.md
assets/: data.csv
src/: calculate_pos_distribution.rs  common.rs  main.rs  parse_data.rs
