[package]
name = "zombie_movement_calculator"
version = "0.1.5"
edition = "2021"

[dependencies]
csv = "1.1.6"
lazy_static = "1.4.0"
libm = "0.2.6"
num-integer = "0.1.45"
num-rational = { version = "0.4.1", features = ["std"] }
num-traits = "0.2.15"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
lto = true
